--- a/BlazorApp/wwwroot/index.html
+++ b/BlazorApp/wwwroot/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>BlazorApp</title>
-    <base href="/" />
+    <base href="BSCollapseResizeIssue/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <script src="_content/BlazorStrap/blazorStrap.js"></script>
     <link href="css/app.css" rel="stylesheet" />
