--- a/BlazorApp/wwwroot/index.html
+++ b/BlazorApp/wwwroot/index.html
@@ -8,7 +8,7 @@
     <title>BlazorApp</title>
     <base href="BSCollapseResizeIssue/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
-    <script src="_content/BlazorStrap/blazorStrap.js"></script>
+    <script src="content/BlazorStrap/blazorStrap.js"></script>
     <link href="css/app.css" rel="stylesheet" />
     <link href="BlazorApp.styles.css" rel="stylesheet" />
 </head>
@@ -21,7 +21,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-<script src="_framework/blazor.webassembly.js"></script>
+<script src="framework/blazor.webassembly.js"></script>
 
 </body>
 
